sfdx/force-app/main/default/objects/LDGCRM_Application_Contact__c/LDGCRM_Application_Contact__c.object-meta.xml
<CustomObject>
    <description>Contacts related to an Application</description>
    <label>Application Contact</label>
    <nameField>
        <displayFormat>LDGAC-{0000}</displayFormat>
        <label>Application Contact ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>