sfdx/force-app/main/default/objects/LDGCRM_Application_Contact__c/fields/LDGCRM_Application__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>LDGCRM_application__c</referenceTo>
    <relationshipLabel>Application Contacts</relationshipLabel>
    <relationshipName>Application_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>