sfdx/force-app/main/default/objects/LDGCRM_Application_Contact__c/fields/LDGCRM_contact__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Contact</description>
    <inlineHelpText>Select Related Contact</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Application Contacts</relationshipLabel>
    <relationshipName>Application_Contacts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>