sfdx/force-app/main/default/objects/LDGCRM_Application_Contact__c/fields/LDGCRM_Email__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Email__c</fullName>
    <description>Email address of related Contact</description>
    <formula>LDGCRM_contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Email address of related Contact</inlineHelpText>
    <label>Contact Email</label>
    <type>Text</type>
</CustomField>