sfdx/force-app/main/default/objects/LDGCRM_Application_Contact__c/fields/LDGCRM_P3_Partner_Portal_Team_Name__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_P3_Partner_Portal_Team_Name__c</fullName>
    <description>Name from the partner portal that was copied over. The name can be modified, so trust the Team UUID.</description>
    <formula>LDGCRM_Application__r.LDGCRM_P3_Partner_Portal_Team_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Name from the partner portal that was copied over. The name can be modified, so trust the Team UUID.</inlineHelpText>
    <label>Partner Portal Team Name</label>
    <type>Text</type>
</CustomField>