sfdx/force-app/main/default/objects/LDGCRM_Application_Contact__c/fields/LDGCRM_P3_Team_UUID__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_P3_Team_UUID__c</fullName>
    <description>References partner portal team id that is consistent across environments.</description>
    <formula>LDGCRM_Application__r.LDGCRM_P3_Team_UUID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>References partner portal team id that is consistent across environments.</inlineHelpText>
    <label>Partner Portal Team UUID</label>
    <type>Text</type>
</CustomField>