sfdx/force-app/main/default/objects/LDGCRM_Application_Contact__c/fields/LGDCRM_P3_Partner_Portal_Admin__c.field-meta.xml
<CustomField>
    <fullName>LGDCRM_P3_Partner_Portal_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this user a Partner Portal Admin</description>
    <inlineHelpText>Is this user a Partner Portal Admin</inlineHelpText>
    <label>Partner Portal Admin</label>
    <type>Checkbox</type>
</CustomField>